# llm-ensemble

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/datasets/: llm_judge_challenge.yaml
configs/io/: ndjson.yaml
configs/models/: README.md  gpt-oss-20b.yaml  phi3-mini.yaml  qwen-0.5b.yaml  tinyllama.yaml
configs/prompts/: README.md  relevance_v1.yaml  thomas-et-al-prompt.jinja  thomas-et-al-prompt.yaml
configs/runtime/: README.md  ci.env  dev.env  prod.env
docker/: Dockerfile.cpu
docs/: TESTING.md  architecture-diagram.txt  cli-refactoring-pattern.md  dependency-injection-refactoring.md  logging.md  ports-and-adapters-implementation.md
llm-ensemble/: .dockerignore  .gitignore  README.md
llm-ensemble/configs/ensembles/: weighted_majority_v1.yaml
llm-ensemble/configs/models/: phi3-mini.yaml  tinyllama.yaml
llm-ensemble/configs/prompts/: relevance_v1.jinja
llm-ensemble/configs/runtime/: ci.env
llm-ensemble/notes/: checklist.md  data-contracts.md  design.md  folder-structure.txt  processes.md  structure.md
notes/: models.md
scripts/: README.md  analyze_logs.py  generate_schemas.py  peek_duckdb.sql  peek_latest.sh
src/llm_ensemble/: aggregate_cli.py  evaluate_cli.py  infer_cli.py  ingest_cli.py
src/llm_ensemble/infer/: README.md  inference.py  models.py  orchestrator.py  provider_router.py
src/llm_ensemble/ingest/: README.md  (+1 more)
tests/: __init__.py  conftest.py
tests/infer/: test_prompt_builder.py  test_prompt_loader.py  test_response_parser.py
tests/ingest/: test_ingest_cli.py  test_llm_judge_ingest.py
(+124 files in other folders)
