[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ensemble"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "pydantic>=2.7"]

[project.scripts]
llm-ensemble-ingest = "llm_ensemble.ingest.cli.ingest_cli:app"

[tool.setuptools.packages.find]
where = ["src"]          # only ships code from src/
exclude = ["**/tests*"]  # optional

[tool.pytest.ini_options]
addopts = "-q"
